styles/Gallery.module.scss
.main {
  display: grid;
  grid-template-columns: 1fr 4fr 2fr;
  grid-template-areas: 'title gallery content';
  row-gap: 12px;
  column-gap: 12px;
  max-height: 100vh;

  @media all and (max-width: 1000px) {
    grid-template-areas:  'title'
                          'gallery'
                          'content';
    grid-template-columns: 100vw;
  }
  
  .content {
    grid-area: content;
    max-height: 100vh;
    padding: 1em;
    text-align: justify;
  }

  .header {
    grid-area: title;
    width: 100%;
    text-align: center;
    padding: 0 1em;
  }
}

.nav {
  position: fixed;
  bottom: 1em;
  left: 1em;
  cursor: pointer;
  text-align: center;
  padding: 0.2em 0.6em 0 0.6em;
  transition: all 40ms ease-out;
  z-index: 10;

  &:hover,
  &:active {
    left: 0.6em;
  }

  @media all and (max-width: 1000px) {
    bottom: unset;
    top: 1em;
  }
}

.gallery {
  max-height: 100vh;
  grid-area: gallery;
  
  & .photo,
  & .photo div {
    width: 100%;
    min-height: 100vh;
    padding: 16px;
  }
  
  & img {
    width: 100%;
    height: 100%;
    object-fit: contain;
  }

  @media all and (max-width: 1000px) {
    max-height: unset;

    & .photo,
    & .photo div {
      min-height: unset;
    }
  }
}

.header-title {
  &:after {
    content: '***';
    display: block;
    margin-top: 12px;
  }
}

.exhibitions {
  ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
  }

  li {
    &:after {
      content: '*';
      display: block;
      margin-top: 12px;
      font-weight: 700;
    }
  }
}

